# amplyd

./: .gitignore  LICENSE  MIGRATION.md  README.fr.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: agent-ci.yml  deploy-agent.yml  web-ci.yml
apps/agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/agent/docs/: sales-playbook.md
apps/agent/src/: agent.py  content_loader.py  email_sender.py  llm.py  main.py  settings.py
apps/agent/src/tools/: __init__.py  book_meeting.py  compose_cv_view.py  cv_tools.py  cv_view.py  notify_vincent.py
apps/agent/tests/: test_agent.py  test_book_meeting.py  test_compose_cv_view.py  test_content_loader.py  test_cv_tools.py  test_email_sender.py  test_health.py  test_notify_vincent.py
apps/web/: .env.example  .gitignore  auth.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
apps/web/app/[locale]/: layout.tsx  opengraph-image.tsx  page.tsx  (+1 more)
apps/web/content/: education.en.json  education.fr.json  preferences.en.json  preferences.fr.json  projects.en.json  projects.fr.json  skills.en.json  skills.fr.json  timeline.en.json  timeline.fr.json
apps/web/content.example/: education.en.json  education.fr.json  preferences.en.json  preferences.fr.json  profile.en.mdx  profile.fr.mdx  projects.en.json  projects.fr.json  skills.en.json  skills.fr.json  timeline.en.json  timeline.fr.json
apps/web/e2e/: chat.spec.ts  cv-overlay.spec.ts  home.spec.ts  legacy-pdfs.spec.ts
apps/web/lib/: content.test.ts  content.ts  cvView.test.ts  cvView.ts  cvViewPresets.ts  ratelimit.test.ts  ratelimit.ts
apps/web/messages/: en.json  fr.json
apps/web/public/: llms.txt
apps/web/tests/: smoke.test.ts
docs/: architecture.md  milestones.md
docs/adr/: 0001-langgraph-python.md  0002-vercel-frontend-cloudrun-agent.md  0003-fumadocs-for-content.md  0004-iso-42001-guardrails.md
scripts/: setup-content.mjs
(+38 files in other folders)
