[project]
name = "amplyd-agent"
version = "0.1.0"
description = "LangGraph agent for amplyd.com — runs on GCP Cloud Run."
authors = [{ name = "Vincent Juhel", email = "vincent.juhel@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.20",
  "litellm>=1.55.0",
  "langfuse>=2.55.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.18",
  "rank-bm25>=0.2.2",
  "langdetect>=1.0.9",
  "resend>=2.6.0",
  "mcp>=1.1.0",
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "respx>=0.21.1",
  "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # simplify
  "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langfuse.*", "litellm.*", "rank_bm25.*", "langdetect.*", "resend.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
